syntax = "proto3";

package course;

service CourseService {
  rpc ListOpenCourses (ListOpenCoursesRequest) returns (ListOpenCoursesResponse);
  rpc Enroll (EnrollRequest) returns (EnrollResponse);
}

message ListOpenCoursesRequest {}

message Course {
  string id = 1;
  string code = 2;
  string title = 3;
  string schedule = 4;
  bool isOpen = 5;
}

message ListOpenCoursesResponse {
  repeated Course courses = 1;
}

message EnrollRequest {
  string userId = 1;
  string courseId = 2;
}

message EnrollResponse {
  string enrollmentId = 1;
  Course course = 2;
}